changed Sirupsen/logrus import to sirupsen/logrus

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,3 +28,8 @@
 [[constraint]]
   name = "github.com/spf13/viper"
   branch = "master"
+
+[[constraint]]
+  name = "github.com/sirupsen/logrus"
+  version = "v1.1.1"
+
