--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,3 +34,7 @@
   name = "github.com/sirupsen/logrus"
   version = "v1.1.1"
 
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.2.2"
