--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,7 +28,7 @@
 [[constraint]]
   name = "github.com/spf13/viper"
   branch = "master"
-  source = "github.com/unchainio/viper"
+  source = "github.com/knadh/viper"
 
 [[constraint]]
   name = "github.com/sirupsen/logrus"
